--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "json-server": "^1.0.0-beta.3",
-    "react-bootstrap": "^2.10.10"
+    "react-bootstrap": "^2.10.10",
+    "react-router-dom": "^7.7.0"
   }
 }
