--- a/team1/package.json
+++ b/team1/package.json
@@ -14,6 +14,7 @@
     "@coreui/react": "^5.7.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "react": "^19.1.0",
