--- a/team1/package.json
+++ b/team1/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
