--- a/team1/package.json
+++ b/team1/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.7.1",
+    "sweetalert2": "^11.22.3",
     "uuid": "^11.1.0",
     "uuidv4": "^6.2.13"
   },
